Adds license headers and fix small issues

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,3 +1,10 @@
+@Comment{
+SPDX-FileCopyrightText: 2025 Benjamin Nakaten (GFZ) <bnakaten@gfz.de>
+SPDX-FileCopyrightText: 2025 GFZ Helmholtz Centre for Geosciences
+
+SPDX-License-Identifier: GPL-3.0-only
+}
+
 @software{
 	GeomodelatorGUI,
 	Author = "Benjamin, Nakaten",
